--- a/CameraCapture/CameraCapture.csproj
+++ b/CameraCapture/CameraCapture.csproj
@@ -49,6 +49,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Emgu\emgucv-windows-x86 2.2.1.1150\bin\Emgu.Util.dll</HintPath>
     </Reference>
+    <Reference Include="Facebook %28.Net 3.5%29">
+      <HintPath>..\packages\ComputerBeacon.Facebook.4.0.427\lib\net35\Facebook (.Net 3.5).dll</HintPath>
+    </Reference>
+    <Reference Include="InputBox">
+      <HintPath>..\packages\Essy.Tools.InputBox.1.0.0\lib\net20\InputBox.dll</HintPath>
+    </Reference>
+    <Reference Include="JSON Toolkit %28.Net 3.5%29">
+      <HintPath>..\packages\ComputerBeacon.Json.4.0.507\lib\net35\JSON Toolkit (.Net 3.5).dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Windows.Design.Interaction, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -73,12 +83,6 @@
     <Compile Include="Agenda.Designer.cs">
       <DependentUpon>Agenda.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClimaForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ClimaForm.Designer.cs">
-      <DependentUpon>ClimaForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Concluido.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +90,12 @@
       <DependentUpon>Concluido.cs</DependentUpon>
     </Compile>
     <Compile Include="Conexao.cs" />
+    <Compile Include="Facebook.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Facebook.Designer.cs">
+      <DependentUpon>Facebook.cs</DependentUpon>
+    </Compile>
     <Compile Include="FaceRecognizer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,11 +119,11 @@
     <EmbeddedResource Include="Agenda.resx">
       <DependentUpon>Agenda.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ClimaForm.resx">
-      <DependentUpon>ClimaForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Concluido.resx">
       <DependentUpon>Concluido.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Facebook.resx">
+      <DependentUpon>Facebook.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FaceRecognizer.resx">
       <DependentUpon>FaceRecognizer.cs</DependentUpon>
@@ -134,6 +144,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
